// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`content in browser matches snapshot for logged out 1`] = `
<div
  className="styled__BarWrapper-sc-3syvnw-12 ePgITh"
  data-analytics-region="openstax-navbar"
>
  <div
    className="styled__TopBar-sc-3syvnw-0 iVnlSK"
    data-testid="navbar"
  >
    <a
      href="/"
    >
      <img
        alt="OpenStax Logo"
        className="styled__HeaderImage-sc-3syvnw-1 gTGoMI"
        role="img"
        src="logo.svg"
      />
    </a>
    <a
      className="styled__Link-sc-3syvnw-6 bqAshF"
      data-analytics-label="login"
      data-testid="nav-login"
      href="/accounts/login?r=/"
    >
       
      Log in
    </a>
  </div>
</div>
`;

exports[`content in browser matches snapshot for null state 1`] = `
<div
  className="styled__BarWrapper-sc-3syvnw-12 ePgITh"
  data-analytics-region="openstax-navbar"
>
  <div
    className="styled__TopBar-sc-3syvnw-0 iVnlSK"
    data-testid="navbar"
  >
    <a
      href="/"
    >
      <img
        alt="OpenStax Logo"
        className="styled__HeaderImage-sc-3syvnw-1 gTGoMI"
        role="img"
        src="logo.svg"
      />
    </a>
  </div>
</div>
`;

exports[`content in browser when logged in matches snapshot 1`] = `
<div
  className="styled__BarWrapper-sc-3syvnw-12 ePgITh"
  data-analytics-region="openstax-navbar"
>
  <div
    className="styled__TopBar-sc-3syvnw-0 iVnlSK"
    data-testid="navbar"
  >
    <a
      href="/"
    >
      <img
        alt="OpenStax Logo"
        className="styled__HeaderImage-sc-3syvnw-1 gTGoMI"
        role="img"
        src="logo.svg"
      />
    </a>
    <div
      className="styled__DropdownContainer-sc-3syvnw-2 cgIyER"
      data-testid="user-nav"
    >
      <span
        className="styled__DropdownToggle-sc-3syvnw-7 bCCQDs"
        data-testid="user-nav-toggle"
        tabIndex="0"
      >
        Hi test
        <svg
          aria-hidden="true"
          className="styled__DownIcon-sc-3syvnw-4 kElTll StyledIconBase-sc-bdy9j4 cCvWXa"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 448 512"
        >
          <path
            d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
            fill="currentColor"
          />
        </svg>
        <svg
          aria-hidden="true"
          className="styled__HamburgerIcon-sc-3syvnw-5 jKOrlZ StyledIconBase-sc-bdy9j4 cCvWXa"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 448 512"
        >
          <path
            d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
            fill="currentColor"
          />
        </svg>
      </span>
      <div
        className="styled__DropdownOverlay-sc-3syvnw-10 heRIAm"
        data-testid="nav-overlay"
        tabIndex="-1"
      >
        <a
          aria-hidden="true"
          href="/"
          tabIndex={-1}
        >
          <img
            alt="OpenStax Logo"
            className="styled__OverlayLogo-sc-3syvnw-3 dlofMy"
            src="logo.svg"
          />
        </a>
        <div>
          <h4
            className="styled__OverlayHeading-sc-3syvnw-8 keFAHn"
          >
            Hi test
          </h4>
          <ul
            className="styled__DropdownList-sc-3syvnw-9 gKoUbp"
          >
            <li>
              <a
                href="/accounts/profile"
                target="_blank"
              >
                Account Profile
              </a>
            </li>
            <li>
              <a
                href="/accounts/logout?r=/"
              >
                Log out
              </a>
            </li>
          </ul>
        </div>
      </div>
      <button
        aria-hidden="true"
        className="styled__TimesIcon-sc-3syvnw-11 iDjoNu"
        tabIndex={-1}
      >
        <svg
          height="15px"
          version="1.1"
          viewBox="0 0 15 15"
          width="15px"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <g
              fill="currentColor"
              transform="translate(-302.000000, -18.000000)"
            >
              <g
                transform="translate(302.000000, 18.000000)"
              >
                <path
                  d="M7.5,5.41522791 L12.0331524,0.579865364 C12.3077536,0.286957429 12.7165503,0.24816296 12.946282,0.493210121 L13.9861449,1.60239723 C14.2158766,1.84744439 14.1795068,2.28349422 13.9049056,2.57640216 L9.37175324,7.41176471 L13.9049056,12.2471273 C14.1795068,12.5400352 14.2158766,12.976085 13.9861449,13.2211322 L12.946282,14.3303193 C12.7165503,14.5753665 12.3077536,14.536572 12.0331524,14.243664 L7.5,9.4083015 L2.96684761,14.243664 C2.69224642,14.536572 2.2834497,14.5753665 2.05371799,14.3303193 L1.01385508,13.2211322 C0.784123363,12.976085 0.820493178,12.5400352 1.09509437,12.2471273 L5.62824676,7.41176471 L1.09509437,2.57640216 C0.820493178,2.28349422 0.784123363,1.84744439 1.01385508,1.60239723 L2.05371799,0.493210121 C2.2834497,0.24816296 2.69224642,0.286957429 2.96684761,0.579865364 L7.5,5.41522791 Z"
                />
              </g>
            </g>
          </g>
        </svg>
      </button>
    </div>
  </div>
</div>
`;
